rushmore/app/resources/css/marketing.css
* {
    box-sizing: border-box;
}

/*
 * -- BASE STYLES --
 * Most of these are inherited from Base, but I want to change a few.
 */
body {
    line-height: 1.7em;
    color: #7f8c8d;
    font-size: 18px;
    font-family: 'Droid Sans', sans-serif;
    margin: 0px;
}
h1, h2, h3, h4, h5, h6, label {
    color: #34495e;
}

/*
 * -- PURE BUTTON STYLES --
 * I want my pure-button elements to look a little different
 */
.pure-button {
    background-color: white;
    color: grey;
    border-radius: 5px;
}
.pure-game-button {
    border-radius: 5px;
    height: 30%;
    -webkit-justify-content: center;
        -ms-flex-pack: center;
            justify-content: center;
    background-color: #dadfe1;
    -ms-flex-item-align: center;
            -webkit-align-self: center;
            align-self: center;    
    font-size: 18px;
    font-weight: 100;
    display: -webkit-flex;
    display: -ms-flexbox;
    display: flex;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
    -webkit-justify-content: center;
        -ms-flex-pack: center;
            justify-content: center;
    -webkit-tap-highlight-color: rgba(0,0,0,0); /* Stop the bounding box when clicking button */
    box-shadow: 0px 2px 2px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
}
.pure-game-button:active {
    background-image: linear-gradient(transparent, rgba(0, 0, 0, .05) 30%, rgba(0, 0, 0, .3));
}

/*
 * -- MENU STYLES --
 * I want to customize how my .pure-menu looks at the top of the page
 */
.home-menu {
    padding: 0.5em;
    text-align: center;
    box-shadow: 0 1px 1px rgba(0, 0, 0, 0.10);
    background: #2d3e50;
    width: 100%;
    position: fixed;
    left: 0;
    top: 0;
}
.pure-menu.pure-menu-fixed {

    /* Fixed menus normally have a border at the bottom. */
    border-bottom: none;    /* I need a higher z-index here because of the scroll-over effect. */
    z-index: 4;
    height: 60px;

}
.home-menu .pure-menu-heading {
    color: white;
    font-weight: 400;
    font-size: 100%;
    text-decoration: none;
    padding: .3em 1em;

}
.home-menu a {
    color: #6FBEF3;
}


/* do not group these rules */
::-webkit-input-placeholder {
    color: #95A5A6;
}
:-moz-placeholder {
    /* FF 4-18 */
    color: #95A5A6;
}
*::-moz-placeholder {
    /* FF 19+ */
    color: #95A5A6;
}
*:-ms-input-placeholder {
    /* IE 10+ */
    color: #95A5A6;
}

/* This is the input box heading that appears on the blue section */
.input-box {
    font-size: 20px;
    text-align: center;
    color: rgba(21, 21, 21, 1);
    border: 3px solid rgba(21, 21, 21, 1);
    background-color: #ECF0F1;
    padding: 1em 1.6em;
    border-radius: 5px;
    font: inherit;
    width: 80%;
}
.deploy-button {
background-color: #87D37C;
    color: white;
    font-size: 40px;
    font-weight: 400;
    border: none;
    width: 80%;
    height: 120px;
    border-radius: 4px;
    margin-right: 40px;
    margin-left: 40px;
    margin-top: 40px;
}

.deploy-button:active {
    background-color: #26A65B;
}

.valid-name-input{
    /*background-color: green;*/
}

.invalid-name-input{
    background-color: #95A5A6;
    color: #D2D7D3;
}

/*
 * -- SPLASH STYLES --
 * This is the blue top section that appears on the page.
 */
#main-container {
    z-index: 1;
    overflow: hidden;    /* The following styles are required for the "scroll-over" effect */
    width: 100%;
    height: 100vh;
    top: 0;
    left: 0;
    background: white;
}

.splash-container {
    background-image: url('../images/backgrounds/polybackground.png');
    height: 100%;
    width: 100%;
    background-size: cover;
}

.splash-container h1 {
    color:white;
    font-size: 70px;
    text-align: center;
    transform: translateY(50%);
    -webkit-transition: all 300ms ;
    -moz-transition: all 300ms ;
    transition: all 300ms ;
}

.bottom-container {
    width: 100%;
    margin: auto;
    text-align: center;
    padding-top: 80px;
}

#main-container .splash-subhead {
    color: black;
}

#main-container h1{
    margin-top: 0;
    margin-bottom: 0px;
    font-weight: 100;
    line-height: 1.2em;
    color:white;
    font-size: 70px;
    text-align: center;
    transform: translateY(50%);
    -webkit-transition: all 300ms ;
    -moz-transition: all 300ms ;
    transition: all 300ms ;
}

#main-container h2{
    color:white;
    font-size: 25px;
    margin-bottom: 0px;
    font-weight: 100;
    line-height: 1.2em;
    margin:30px 15px 30px 15px;
}

#top-container {
    height: 20vh;
    padding: 20px;
    text-align: center;
    background-color: #2d3e50;
}

#top-container p {
   color: white;
   font-size: 20px; 
}

#tutorial-container {
    background-color: #446CB3;
    height: 100%;
    top: 0%;
    width: 100%;    
    position: absolute;
    color: white;
}

.tutorial-page-container {
    height: 100%;
    background-size: cover;
    background-position-x: 40%;
}

.mini-lesson {
    height: 30%;
    width: 100%;
    display: -webkit-flex;  
    display: -ms-flexbox;  
    display: flex;
            -webkit-flex-flow: row nowrap;
                -ms-flex-flow: row nowrap;
                    flex-flow: row nowrap;
    -webkit-justify-content: space-around;
        -ms-flex-pack: distribute;
            justify-content: space-around;
    -webkit-align-items: center;
        -ms-flex-align: center;
            align-items: center;
}

.mini-lesson .text {
    width: 70%;
    padding-left: 20px;
}

.mini-lesson .text h2 {
    margin: 30px 0px 0px 0px !important;
}

.mini-lesson .text p {
    color: white;
    font-size: 20px;
    margin-top: 0px;
}

.mini-lesson .image {
    width: 35%;
}
/* ... */

